--- a/src/app.scss
+++ b/src/app.scss
@@ -7,30 +7,13 @@ body,
 }
 
 .container {
-    width: 90vw;
-    height: 90vh;
-    background-color: $background;
-    padding: 5vh 5vw;
-}
-
-.game-board {
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 0px;
     height: 100%;
-    width: 100%;
+    display: grid;
+    grid-template-columns: auto min(60vw, 90vh) auto;
+    align-items: center;
 }
 
-.game-cell {
-    height: 24px;
-    width: 24px;
-    box-sizing: border-box;
-    border: 1px solid $border;
-}
-
-.snake-body {
-    background-color: $snake;
-    &.snake-head {
-        border: 2px solid $fruit;
-    }
+.responsive-canvas {
+    width: min(60vw, 90vh);
+    height: min(60vw, 90vh);
 }
